--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -182,6 +182,7 @@
     btn.addEventListener('click',()=>{
       const isexpanded = btn.getAttribute('aria-expanded') === "true"
       btn.setAttribute('aria-expanded' , (!isexpanded))
+      btn.setAttribute('aria-label' , 'close')
       menu.classList.toggle('show_menu');
       body.classList.toggle('no_scroll');
       
