6th project complete

--- a/contact-form-main/index.html
+++ b/contact-form-main/index.html
@@ -82,7 +82,7 @@
       </form>
     </div>
   </main>
-  <div class="succ_massage" aria-liv="polite" aria-hidden="true">
+  <aside class="succ_massage" aria-liv="polite" aria-hidden="true">
     <div class="holder">
       <img src="./assets/images/icon-success-check.svg" height="20" width="20" alt="success-checked icon" cass="succ_img">
       <h3 class="succ_text">
@@ -92,7 +92,7 @@
     <p aria-hidden="true" class="succ_text">
       Thanks for completing the form. We'll be in touch soon!
     </p>
-  </div>
+  </aside>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
